# greptile-v3-posthog

./: Dockerfile  docker-compose.base.yml  pnpm-lock.yaml  pyproject.toml
.github/actions/run-backend-tests/: action.yml
.github/workflows/: browserslist.yml  ci-ai.yml  ci-backend.yml  ci-dagster.yml  ci-e2e-playwright.yml  ci-frontend.yml  ci-nodejs.yml  ci-python.yml  ci-rust.yml  ci-storybook.yml  storybook-deploy.yml
ee/hogai/: tool.py
ee/hogai/test/: test_assistant.py
frontend/: package.json
frontend/src/: types.ts
frontend/src/lib/: api.ts  constants.tsx
frontend/src/queries/: schema.json
frontend/src/scenes/: appScenes.ts  sceneTypes.ts  scenes.ts
frontend/src/styles/: base.scss
posthog/: conftest.py  permissions.py  schema.py  schema_helpers.py
posthog/api/: __init__.py  cohort.py  hogql_query.py  user.py
posthog/api/dashboards/: dashboard.py
posthog/batch_exports/: http.py
posthog/cdp/templates/: __init__.py
posthog/clickhouse/: query_log_archive.py
posthog/hogql/functions/: mapping.py
posthog/hogql_queries/: query_runner.py
posthog/migrations/: 0849_alter_team_session_recording_retention_period.py  0856_alter_exportedasset_export_format.py  max_migration.txt
posthog/models/cohort/: cohort.py
posthog/models/feature_flag/: feature_flag.py
posthog/test/: base.py
products/embedded_analytics/: manifest.tsx
products/product_analytics/: manifest.tsx
rust/: Cargo.toml
rust/common/hypercache/: Cargo.toml
rust/common/hypercache/src/: lib.rs
rust/common/hypercache/tests/: integration_tests.rs
(+51 files in other folders)
