[package]
name = "common-hypercache"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
common-compression = { path = "../../common-compression" }
common-metrics = { path = "../metrics" }
common-redis = { path = "../redis" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

